deploy/k8s/overlays/local-stage/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-stage-ingress
  namespace: theassembly-apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: stage-asm-athlete.theassembly.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: athlete
            port:
              number: 8501
  - host: stage-asm-control.theassembly.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 8501
